
Next (TBD)
----------

Breacking Changes:

- `expr` argument is now a required option in `rio_tiler.utils.expression`. (#88)

1.1.4 (2019-03-11)
------------------
- Add 'rplumbo' colormap (#90 by @DanSchoppe)

1.1.3 (2019-03-06)
------------------

Bug fixes:

- Fix casting to integer for MAX_THREADS environment variable.

1.1.1 (2019-02-21)
------------------
- Minor typo correction and harmonization of the use of src/src_dst/src_path in `rio_tiler.utils`

Bug fixes:

- Fix nodata handling in `utils.raster_get_stats`

1.1.0 (2019-02-15)
------------------

- Allow options forwarding to `tile_read` from `main.tile` function (#86)
- Add `resampling_method` options in `rio_tiler.utils.tile_read` to allow user set
resampling. Default is now bilinear (#85)

Bug fixes:

- Fix nodata option forwarding to tile_read when source is a path (#83)

Refactoring:

- Refactor `rio_tiler.utils.tile_read` to reduce code complexity (#84)

Breacking Changes:

- `indexes` options is now set to **None** in `rio_tiler.utils.tile_read`.
Default will now be the dataset indexes.

1.0.1 (2019-02-14)
------------------
- Fix mask datatype bug in `rio_tiler.utils.array_to_image`(#79)
- Fix nodata handling and better test for the nodata/mask main module (#81)

1.0.0 (2019-02-11)
------------------
- add missing Landsat panchromatic band (08) min/max fetch in `rio_tiler.landsat8.metadata` (#58)
- add pre-commit for commit validation (#64)
- code formatting using Black (the uncompromising Python code formatter) (#64)
- update documentation (Sentinel-2 cost) (#68)
- add `utils.raster_get_stats` and `utils._get_stats` to replace `min_max*` function
and to return more statistics (#66)
- add overview level selection to statistical functions to reduce the data download (#59)
- add pure GDAL `array_to_image` function to replace PIL tools (#29)
- add GDAL format output from `utils.get_colormap` to be used in `array_to_image` (#29)
- add GDAL compatible Image creation profile (#29)